fixed spacing bug

--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -37,6 +37,7 @@ body.with-panel-left-cover .statusbar-overlay {
 .wifi-network-container {
 	width: 100%;
 	display: flex;
+	/*height: 44px;*/
 }
 .wifi-name {
 	flex: 0 0 80%;
@@ -49,7 +50,9 @@ body.with-panel-left-cover .statusbar-overlay {
 }
 
 .wifi-name input {
-	height: 100%!important;
+	height: 100% !important;
+	position: absolute;
+	bottom: 0px;
 }
 .wifi-name input[disabled] {
 	opacity: 1;
